# anoma-app-sdk

./: .NOTES  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  commitlint.config.js  eslint.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  tsconfig.tools.json  tsdown.config.ts  typedoc.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/actions/pnpm-cache/: action.yml
.github/workflows/: build.yml  release-please.yml  release.yml
anoma-apps-lib/: Cargo.toml
anoma-apps-lib/anomapay_lib/: Cargo.toml
anoma-apps-lib/anomapay_lib/src/: lib.rs  logic.rs  resource.rs  types.rs
anoma-apps-lib/anomapay_lib_v2/: Cargo.toml
anoma-apps-lib/anomapay_lib_v2/src/: lib.rs  logic.rs  resource.rs  types.rs
anoma-apps-lib/anomapay_shared/: Cargo.toml
anoma-apps-lib/anomapay_shared/src/: types.rs
anoma-apps-lib/arm_risc0_bindings/: Cargo.toml
anoma-apps-lib/arm_risc0_bindings/src/: lib.rs
anoma-apps-lib/arm_risc0_bindings/src/arm/: action_tree.rs  authorization.rs  compliance.rs  encryption.rs  evm.rs  merkle_path.rs  mod.rs  nullifier_key.rs  resource.rs
arm-bindings/: .gitignore  Cargo.toml  package.json  ubrn.config.yaml
arm-bindings/rust/: Cargo.toml
arm-bindings/rust/src/: constants.rs  error.rs  lib.rs
arm-bindings/rust/src/arm/: action_tree.rs  authorization.rs  compliance.rs  digest.rs  encryption.rs  evm.rs  nullifier_key.rs  resource.rs  utils.rs
arm-bindings/rust/src/utils/: mod.rs
arm-bindings/src/: constants.rs  debug.rs  index.native.ts  index.ts  index.web.ts  lib.rs
arm-bindings/src/arm/: action_tree.rs  authorization.rs  compliance.rs  digest.rs  encryption.rs  evm.rs  mod.rs  nullifier_key.rs  resource.rs  utils.rs
arm-bindings/src/utils/: mod.rs
docs/: configuration.md  globals.md  index.md
docs/.vitepress/: config.ts
docs/classes/: ApiClient.md  AuthoritySignature.md  AuthoritySigningKey.md  AuthorityVerifyingKey.md  CallType.md  Ciphertext.md  Digest.md  Domain.md  EnvioClient.md  FeedbackClient.md  HeliaxKeys.md  IndexerClient.md  InitialRoot.md  InsufficientResourcesError.md  KeyPair.md  KeyPairSerializer.md  Keypair.md  MerkleTree.md  NullifierKey.md  NullifierKeyCommitment.md  NullifierKeyPair.md  ParametersDraftResolver.md  PayloadBuilder.md  PublicKey.md  Resource.md  ResourceWithLabel.md  ResponseError.md  SecretKey.md  TransferBackendClient.md  TransferBuilder.md  TransferLogic.md  WasmNullifierKeyPair.md
docs/concepts/: key-hierarchy.md  pay-address.md  transfers.md
docs/functions/: aggregateTokenBalances.md  authorizeActions.md  bigIntReplacer.md  buildAppResources.md  buildBalanceIndex.md  buildBigIntReviver.md  buildNetworkMap.md  buildTransactionHistory.md  buildTransactionLookup.md  bytesToWords.md  calculateLabelRef.md  calculateLoadThreshold.md  calculateValueRefFromAuth.md  calculateValueRefFromUserAddress.md  checkIfExceedsDepositLimit.md  convertAggregatedToTokenBalance.md  convertCounterToValueRef.md  convertObjectToSnakeCase.md  convertWalletBalanceToTokenBalance.md  create.md  createUserKeyring.md  createUserKeyringFromIkm.md  createUserKeyringFromPasskey.md  decodePayAddress.md  deserializeUserKeyring.md  encodePayAddress.md  estimateTransferTimeInSeconds.md  extractNumericValue.md  extractUserPublicKeys.md  findBalanceByToken.md  formatBalance.md  formatFiatAmount.md  formatTokenAmount.md  fromBase64.md  fromBase64Url.md  fromHex.md  fromHexToBase64.md  generateClaimLink.md  generateRandomBytes.md  getBinanceDeepLink.md  (+42 more)
docs/getting-started/: installation.md  quick-start.md
docs/guides/: private-transfer-app.md
docs/interfaces/: EncodedKeypair.md  EncodedNullifierKeyPair.md  EncodedResource.md  InitOutput.md  ResourceProps.md  WalletBalance.md
docs/type-aliases/: AggregatedTokenBalance.md  AggregatedTokenBalancesOutput.md  AppResource.md  AuthType.md  Config.md  ConsumedResource.md  ConsumedResourceDraft.md  ConsumedTagsResponse.md  ConsumedWitnessData.md  ConsumedWitnessDataSchema.md  CreateFeeTransferProps.md  CreateMintProps.md  CreatedResource.md  CreatedResourceDraft.md  CreatedWitnessData.md  CreatedWitnessDataSchema.md  FeeRequest.md  FeeResponse.md  IndexerAddKeysResponse.md  IndexerBlob.md  IndexerContract.md  IndexerEVMTransaction.md  IndexerHealthResponse.md  IndexerId.md  IndexerResource.md  IndexerResourceResponse.md  IndexerTag.md  IndexerTransaction.md  InitInput.md  KeyTuple.md  MerkleProofResponse.md  MintResources.md  NetworkAddress.md  NullifierRecord.md  NullifierRecordResponse.md  PRFDomain.md  Parameters.md  PayAddress.md  Permit2Data.md  Permit2Props.md  (+26 more)
docs/variables/: ANOMAPAY_SDK_VERSION.md  ANOMA_APP_SDK_VERSION.md  FeeCompatibleERC20Tokens.md  HttpStatus.md  IndexerPaths.md  PRFDomainMap.md  TRANSACTION_STATUS.md  TransferBackendPaths.md  base64Schema.md  claimRoute.md
examples/balance/: README.md  index.html  package.json  tsconfig.json
patches/: uniffi-bindgen-react-native@0.31.0-3.patch
scripts/: build.mjs  copy.mjs  create-account.ts  paths.mjs
src/: app-constants.ts  index.ts  lib-constants.ts  routeTree.gen.ts  signing-message.ts  types.ts  urls.ts  version.ts
src/api/: ApiClient.ts  EnvioClient.ts  FeedbackClient.ts  IndexerClient.ts  TransferBackendClient.ts  builders.ts  index.ts  paths.ts  types.ts
src/domain/: index.ts
src/domain/crypto/: types.ts  (+1 more)
src/lib/: animation.ts  balances.ts  base64url.ts  chainUtils.ts  claim.ts  crypto.ts  depositValidation.ts  download.ts  encryptedJson.ts  forms.ts  index.ts  keyUtils.ts  mobile.ts  payAddress.ts  permit2.ts  redirect.ts  requestPayment.ts  resources.ts  sanitize.ts  storage.ts  themeUtils.ts  tokenUtils.ts  utils.ts
src/wasm/: arm_bindings.d.ts  arm_bindings.js  arm_bindings_bg.wasm  client.ts  index.ts
tests/: data.json
tests/data/: resources.json
tools/fee-collector/: check-balance.ts  generate-account.ts  index.ts  keyring.ts  register.ts  verify-account.ts
(+73 files in other folders)
