[workspace]
resolver = "3"
members = ["arm_risc0_bindings", "anomapay_lib", "anomapay_lib_v2", "anomapay_shared"]

[workspace.dependencies]
getrandom = { version = "0.3", default-features = false, features = ["std", "wasm_js"] }
getrandom-v2 = { version = "0.2", package = "getrandom", default-features = false, features = ["std", "js"] }
wasm-bindgen = { version = "0.2.100" }
tsify = { version = "0.5.5", features = ["js", "json", "wasm-bindgen" ] }
arm = { version = "1.0.0", default-features = false, features = ["transaction"], package = "anoma-rm-risc0" }
arm-gadgets = { version = "1.0.0", package = "anoma-rm-risc0-gadgets"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
hex = "0.4.3"
