[package]
name = "arm-bindings"
version = "0.1.0"
edition = "2024"
description = "Wasm bindings for arm-risc0"
repository = "https://github.com/anoma/anoma-toolkit"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
arm = { git = "https://github.com/anoma/arm-risc0.git", default-features = false, features = ["transaction"], tag = "v0.13.0" }
arm-gadgets = { git = "https://github.com/anoma/arm-risc0", tag = "v0.13.0" }
base64 = "0.22.1"
bincode = "1.3.3"
risc0-zkvm = { version = "3.0.3", features = ["std", "unstable"], default-features = false }
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
hex = "0.4.3"
getrandom = { version = "0.3", default-features = false, features = ["std"] }
getrandom-v2 = { version = "0.2", package = "getrandom", default-features = false, features = ["std"] }

# Support wasm feature
# TODO: Remove wasm feature, only support wasm-pack build
wasm-bindgen = { version = "0.2.100", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
tsify = { version = "0.5.5", optional = true }
alloy-sol-types = "1.4.1"

[features]
default = ["wasm"]
wasm = [
  "console_error_panic_hook",
  "getrandom/wasm_js",
  "getrandom-v2/js",
  "serde-wasm-bindgen",
  "tsify/js",
  "tsify/json",
  "tsify/wasm-bindgen",
  "wasm-bindgen",
]
