[package]
name = "anomapay_lib"
description = "Wasm bindings for the AnomaPay application"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arm-risc0-bindings = { path = "../arm_risc0_bindings" }
anomapay_shared = { path = "../anomapay_shared" }
# See justin/prove-feature-gate  in anoma/anomapay-backend-multichain
# TODO: Format me plz! Probably won't need to break into lines eventually, since it will just be version & no default features specified
transfer_library = { git = "ssh://git@github.com/anoma/anomapay-backend-multichain.git", branch = "justin/prove-feature-gate", default-features = false }
transfer_witness = { git = "ssh://git@github.com/anoma/anomapay-backend-multichain.git", branch = "justin/prove-feature-gate", default-features = false }

hex = { workspace = true }
getrandom = { workspace = true }
getrandom-v2 = { workspace = true }
tsify = { workspace = true}
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
