[package]
name = "anomapay_lib_v2"
version = "0.1.0"
edition = "2024"
description = "Wasm bindings for the AnomaPay application"
repository = "https://github.com/anoma/anoma-app-sdk"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
transfer_library_v2 = { git = "ssh://git@github.com/anoma/anomapay-backend.git", branch = "justin/prove-feature-gate", default-features = false }
# TODO: Use workspace dependency
getrandom = { version = "0.3", default-features = false, features = ["std", "wasm_js"] }
getrandom-v2 = { version = "0.2", package = "getrandom", default-features = false, features = ["std", "js"] }
wasm-bindgen = { version = "0.2.100" }
