[package]
name = "anomapay_lib_v2"
description = "Wasm bindings for the AnomaPay V2 application"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
arm-risc0-bindings = { path = "../arm_risc0_bindings"}
anomapay_shared = { path = "../anomapay_shared" }
transfer_library_v2 = { git = "ssh://git@github.com/anoma/anomapay-backend.git", branch = "justin/prove-feature-gate", default-features = false }
transfer_witness = { git = "ssh://git@github.com/anoma/anomapay-backend-multichain.git", branch = "justin/prove-feature-gate", default-features = false }
transfer_witness_v2 = { git = "ssh://git@github.com/anoma/anomapay-backend-multichain.git", branch = "justin/prove-feature-gate", default-features = false }

hex.workspace = true
getrandom.workspace = true
getrandom-v2.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
rstest.workspace = true
