[package]
name = "anomapay_shared"
description = "Shared functionality and types for AnomaPay crates"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex.workspace = true
getrandom.workspace = true
getrandom-v2.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
