[package]
name = "arm-risc0-bindings"
version = "0.1.0"
edition = "2024"
description = "Wasm bindings for arm-risc0"
repository = "https://github.com/anoma/anoma-app-sdk"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
alloy-sol-types = "1.4.1"
arm = { version = "1.0.0", default-features = false, features = ["transaction"], package = "anoma-rm-risc0" }
arm-gadgets = { version = "1.0.0", package = "anoma-rm-risc0-gadgets"}
base64 = "0.22.1"
bincode = "1.3.3"
risc0-zkvm = { version = "3.0.3", features = ["std", "unstable"], default-features = false }
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
hex = "0.4.3"
getrandom = { version = "0.3", default-features = false, features = ["std", "wasm_js"] }
getrandom-v2 = { version = "0.2", package = "getrandom", default-features = false, features = ["std", "js"] }
wasm-bindgen = { version = "0.2.100" }
console_error_panic_hook = { version = "0.1.7" }
serde-wasm-bindgen = { version = "0.6.5" }
tsify = { version = "0.5.5", features = ["js", "json", "wasm-bindgen" ] }
