[package]
name = "arm-bindings"
version = "0.1.0"
edition = "2024"
description = "Wasm and React Native bindings for arm-risc0"
repository = "https://github.com/anoma/anoma-app-sdk"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Must match the uniffi version pinned by uniffi-bindgen-react-native.
uniffi = "0.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
arm = { version = "1.0.0", default-features = false, features = ["transaction"], package = "anoma-rm-risc0" }
arm-gadgets = { version = "1.0.0", package = "anoma-rm-risc0-gadgets"}
base64 = "0.22.1"
bincode = "1.3.3"
risc0-zkvm = { version = "3.0.3", features = ["std", "unstable"], default-features = false }
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
hex = "0.4.3"
getrandom = { version = "0.3", default-features = false, features = ["std", "wasm_js"] }
getrandom-v2 = { version = "0.2", package = "getrandom", default-features = false, features = ["std", "js"] }
thiserror = "2"
alloy-sol-types = "1.4.1"
